# edge-containers-cli

./: .copier-answers.yml  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  catalog-info.yaml  environment.sh  pyproject.toml  renovate.json  setup.cfg  switcher.json
.github/: CONTRIBUTING.md  CONTRIBUTING.rst
.github/workflows/: _container.yml  _sys_test.yml  ci.yml  code.yml  docs.yml
docs/: conf.py  index.rst  reference.md
docs/developer/explanations/: decisions.rst
docs/developer/how-to/: make-release.rst
docs/developer/tutorials/: dev-install.rst
docs/how-to/: run-container.md
docs/reference/: cli.md  environment-variables.md
docs/tutorials/: installation.md
docs/user/how-to/: run-container.rst
docs/user/reference/: api.rst
docs/user/tutorials/: installation.rst
main/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
main/.doctrees/: _api.doctree  explanations.doctree  genindex.doctree  how-to.doctree  index.doctree  reference.doctree  tutorials.doctree
main/.doctrees/_api/: edge_containers_cli.doctree
main/.doctrees/explanations/: decisions.doctree
main/.doctrees/explanations/decisions/: 0001-record-architecture-decisions.doctree  0002-switched-to-python-copier-template.doctree
main/.doctrees/how-to/: contribute.doctree  run-container.doctree
main/.doctrees/reference/: cli.doctree  environment-variables.doctree
main/.doctrees/tutorials/: installation.doctree
main/_api/: edge_containers_cli.html
main/_sources/: _api.rst.txt
main/_sources/_api/: edge_containers_cli.rst.txt
main/_static/: documentation_options.js
main/explanations/: decisions.html
main/explanations/decisions/: 0001-record-architecture-decisions.html  0002-switched-to-python-copier-template.html
main/how-to/: contribute.html  run-container.html
main/reference/: cli.html  environment-variables.html
main/tutorials/: installation.html
src/ec_cli/: __init__.py  __main__.py  autocomplete.py  docker.py  git.py  globals.py  logging.py  shell.py  utils.py
src/ec_cli/cmds/: cli.py  helm.py  ioc_cli.py  k8s_commands.py  kubectl.py  local_commands.py
src/ec_cli/ioc/: helm.py  ioc_cli.py  k8s_commands.py  kubectl.py  local_commands.py
src/edge_containers_cli/: __init__.py  __main__.py  autocomplete.py  backend.py  cli.py  definitions.py  docker.py  git.py  globals.py  logging.py  shell.py  utils.py
src/edge_containers_cli/cmds/: argo_commands.py  cli.py  commands.py  demo_commands.py  helm.py  k8s_commands.py  kubectl.py  local_commands.py  monitor.py  monitor.tcss
src/epics_containers_cli/: __init__.py  __main__.py  autocomplete.py  cmd_bl.py  cmd_cluster.py  cmd_dev.py  cmd_ioc.py  cmd_k8s.py  command.py  context.py  docker.py  enums.py  git.py  globals.py  helm.py  kubectl.py  logging.py  shell.py  urls.py  utils.py
src/epics_containers_cli/dev/: cli.py  commands.py  dev_cli.py  dev_commands.py
src/epics_containers_cli/ioc/: cli.py  commands.py  helm.py  ioc_autocomplete.py  ioc_cli.py  ioc_commands.py  k8s_commands.py  local_commands.py
src/epics_containers_cli/k8s/: cli.py  commands.py  k8s_cli.py  k8s_commands.py
tests/: conftest.py  test_argocd.py  test_autocomplete.py  test_cli.py  test_demo.py  test_dev.py  test_ioc.py  test_ioc_autocomplete.py  test_k8s.py  test_local.py  test_system.py  test_unit.py  test_utils.py
tests/data/: argocd.yaml  autocomplete.yaml  cli.yaml  dev.yaml  ioc.yaml  ioc_autocomplete.yaml  k8s.yaml  local.yaml  yaml.yaml
tests/data/beamline-chart/: .helmignore  Chart.yaml.jinja  values.yaml
tests/data/bl01t/: .copier-answers.yml  .gitignore  README.md  environment.sh  update-helm
tests/data/bl01t-deployment/apps/: values.yaml
tests/data/bl01t-services/services/: values.yaml
tests/data/bl01t-services/services/bl01t-ea-test-01/: Chart.yaml
tests/data/bl01t-services/services/bl01t-ea-test-01/config/: ioc.db  ioc.yaml
tests/data/bl01t-services/services/bl01t-ea-test-02/: Chart.yaml  values.yaml
tests/data/bl01t-services/services/bl01t-ea-test-02/charts/: dls-aravis
tests/data/bl01t-services/services/dls-aravis/: Chart.yaml
tests/data/bl01t-services/services/dls-aravis/templates/: configmap.yaml
tests/data/bl01t/.github/: dependabot.yml
tests/data/bl01t/.github/workflows/: ci_verify.sh  verify.yml
tests/data/bl01t/helm/shared/: Chart.yaml  README.md  values.yaml
tests/data/bl01t/include/iocs/: Chart.yaml
tests/data/bl01t/include/iocs/templates/: configmap.yaml
tests/data/bl01t/services/: beamline_values.yaml
tests/data/bl01t/services/bl01t-ea-test-01/: Chart.yaml  templates  values.yaml
tests/data/bl01t/services/bl01t-ea-test-01/config/: ioc.db  ioc.yaml
tests/data/bl01t/services/bl01t-ea-test-01/templates/: configmap.yaml
tests/data/bl01t/services/dls-aravis/: values.yaml
tests/data/example-ibek-config/: ioc.db  ioc.yaml
tests/data/ioc-template/: readme.txt
tests/data/iocs/bl45p-ea-ioc-01/config/: ioc.yaml
tests/data/services/bl45p-ea-ioc-01/: values.yaml
tests/samples/bl45p-ea-ioc-01/: values.yaml
