[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ec-cli"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "CLI for deploying and managing epics containers IOCs and services"

dependencies = [
    "natsort",
    "typer[all]",
    "requests",
    "ruamel.yaml",
    "jinja2",
    "pandas",
    "pyarrow",
]

dynamic = ["version"]
license.file = "LICENSE"
readme = "README.rst"
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "black",
    "mock",
    "pyright",
    "pipdeptree",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "tox-direct",
    "types-mock",
    "copier",
]

[project.scripts]
ec = "ec_cli.__main__:cli"

[project.urls]
GitHub = "https://github.com/epics-containers/ec-cli"

[[project.authors]] # Further authors may be added by duplicating this section
email = "giles.knap@gmail.com"
name = "Giles Knap"


[tool.setuptools_scm]
write_to = "src/ec_cli/_version.py"

[tool.pyright]
reportMissingImports = false # Ignore missing stubs in imported modules

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = [
    "error",
    "ignore::pytest_cov.plugin.CovDisabledWarning",
    "ignore:'autocompletion' is renamed to 'shell_complete'. The old name is deprecated and will be removed in Click 8.1. See the docs about 'Parameter' for information about new behavior.:DeprecationWarning:typer",
]
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "src tests"

[tool.coverage.run]
data_file = "/tmp/ec_cli.coverage"

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

# tox must currently be configured via an embedded ini string
# See: https://github.com/tox-dev/tox/issues/999
[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist=True

[testenv:{pre-commit,pyright,pytest}]
# Don't create a virtualenv for the command, requires tox-direct plugin
direct = True
passenv = *
allowlist_externals =
    pytest
    pre-commit
    pyright
commands =
    pytest: pytest --cov=ec_cli --cov-report term --cov-report xml:cov.xml {posargs}
    pyright: pyright src tests {posargs}
    pre-commit: pre-commit run --all-files {posargs}
"""


[tool.ruff]
src = ["src", "tests"]
line-length = 88
ignore = [
    "C408", # Unnecessary collection call - e.g. list(...) instead of [...]
    "E501", # Line too long, should be fixed by black.
]
select = [
    "C4",   # flake8-comprehensions - https://beta.ruff.rs/docs/rules/#flake8-comprehensions-c4
    "E",    # pycodestyle errors - https://beta.ruff.rs/docs/rules/#error-e
    "F",    # pyflakes rules - https://beta.ruff.rs/docs/rules/#pyflakes-f
    "W",    # pycodestyle warnings - https://beta.ruff.rs/docs/rules/#warning-w
    "I001", # isort
]
